// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts should render 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/undefined/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Contacts
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Manage your frequent contacts
              </div>
            </div>
            <div>
              <div
                class="flex justify-end items-top"
              >
                <button
                  class="sc-AxjAm ddQVWI whitespace-no-wrap"
                  color="primary"
                  data-testid="contacts__add-contact-btn"
                  type="button"
                >
                  Add Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
            data-testid="contacts__banner"
          >
            <svg
              class="mx-auto"
              height="175"
            >
              contacts-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Add your most frequent contacts for fast, easy payments
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts should render with contacts 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            />
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <a
                data-testid="navbar__buttons--send"
                href="/profiles/undefined/transactions/transfer"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </a>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-2 container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-dark"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Contacts
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                Manage your frequent contacts
              </div>
            </div>
            <div>
              <div
                class="flex justify-end items-top"
              >
                <div
                  class="relative"
                >
                  <button
                    class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                    data-testid="header-search-bar__button"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="h-10 pl-8 my-auto ml-8 border-l border-theme-neutral-200"
                />
                <button
                  class="sc-AxjAm ddQVWI whitespace-no-wrap"
                  color="primary"
                  data-testid="contacts__add-contact-btn"
                  type="button"
                >
                  Add Contact
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="w-full"
          >
            <div
              class="sc-fznZeY dcDttg"
              role="table"
            >
              <table
                class="table-auto"
              >
                <thead>
                  <tr
                    role="row"
                  >
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-inline align-top pl-13"
                      >
                        <div>
                          Nickname
                        </div>
                        <div
                          class="flex items-center ml-2 text-theme-color-neutral"
                          data-testid="table__Sort"
                        >
                          <div
                            class="sc-AxirZ jMwzyA"
                            height="12"
                            width="15"
                          >
                            <svg>
                              sort.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Network
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top pl-13"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                    <th
                      class="text-sm text-left select-none text-theme-neutral"
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top justify-center"
                      >
                        <div>
                          Account Type
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr>
                    <td
                      class="text-center border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="sc-fznyAO gQONjx bg-theme-primary border-theme-primary"
                        >
                          <span
                            class="text-sm text-theme-background"
                          >
                            RO
                          </span>
                        </div>
                        <span
                          class="font-semibold"
                        >
                          ROBank
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-center border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="sc-fznyAO gQONjx border-ark-mainnet"
                      >
                        <div
                          class="sc-AxirZ iQaTP text-ark-mainnet"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-6 border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fzqBZW kvyVsY text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            ASuusX…GQ3kqT
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                    >
                      <div
                        class="sc-fznyAO gQONjx border-black"
                      >
                        <div
                          class="sc-AxirZ dCVESD"
                          height="25"
                          width="25"
                        >
                          <svg>
                            delegate.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="sc-fznyAO gQONjx border-black"
                      >
                        <div
                          class="sc-AxirZ dCVESD"
                          height="25"
                          width="25"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="sc-fznyAO gQONjx border-black"
                      >
                        <div
                          class="sc-AxirZ dCVESD"
                          height="25"
                          width="25"
                        >
                          <svg>
                            bridgechain.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right"
                        >
                          <button
                            class="sc-AxjAm kwTlRm"
                            color="primary"
                            type="button"
                          >
                            <div
                              class="sc-AxirZ eEbZjj"
                              height="20"
                              width="20"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="text-center "
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="sc-fznyAO gQONjx bg-theme-primary border-theme-primary"
                        >
                          <span
                            class="text-sm text-theme-background"
                          >
                            OL
                          </span>
                        </div>
                        <span
                          class="font-semibold"
                        >
                          OLEBank
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-center "
                    >
                      <div
                        class="sc-fznyAO gQONjx border-ark-mainnet"
                      >
                        <div
                          class="sc-AxirZ iQaTP text-ark-mainnet"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            ark.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-6 border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fzqBZW kvyVsY text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            ASuusX…GQ3kqT
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                    >
                      <div
                        class="sc-fznyAO gQONjx border-black"
                      >
                        <div
                          class="sc-AxirZ dCVESD"
                          height="25"
                          width="25"
                        >
                          <svg>
                            delegate.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right"
                        >
                          <button
                            class="sc-AxjAm kwTlRm"
                            color="primary"
                            type="button"
                          >
                            <div
                              class="sc-AxirZ eEbZjj"
                              height="20"
                              width="20"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="text-center "
                    />
                    <td
                      class="text-center "
                    >
                      <div
                        class="sc-fznyAO gQONjx border-bitcoin-mainnet"
                      >
                        <div
                          class="sc-AxirZ iQaTP text-bitcoin-mainnet"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            btc.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-6 border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="15pyr1HRAxpq3x64duXav1csmyCtXXu9G8"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"40\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(103, 58, 183)\\"/></svg>"
                              title="15pyr1HRAxpq3x64duXav1csmyCtXXu9G8"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fzqBZW kvyVsY text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            15pyr1…XXu9G8
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                    />
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    />
                  </tr>
                  <tr>
                    <td
                      class="text-center border-b border-dashed border-theme-neutral-200"
                    />
                    <td
                      class="text-center border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="sc-fznyAO gQONjx border-ethereum-mainnet"
                      >
                        <div
                          class="sc-AxirZ iQaTP text-ethereum-mainnet"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            eth.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-6 border-b border-dashed border-theme-neutral-200"
                    >
                      <div
                        class="flex items-center space-x-3"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full"
                          >
                            <img
                              alt="0x5e8f7a63e31c759ef0ad5e71594e838b380d7c33"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                              title="0x5e8f7a63e31c759ef0ad5e71594e838b380d7c33"
                            />
                          </div>
                        </div>
                        <div
                          class="inline-block truncate align-middle"
                        >
                          <span
                            class="sc-fzqBZW kvyVsY text-theme-text font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            0x5e8f…0d7c33
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                    >
                      <div
                        class="sc-fznyAO gQONjx border-black"
                      >
                        <div
                          class="sc-AxirZ dCVESD"
                          height="25"
                          width="25"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                    </td>
                    <td
                      class="border-b border-dashed border-theme-neutral-200"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
